--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,37 +9,44 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
+      # 1. Setup Java (Required for Android builds)
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      # 2. Setup Python
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
+      # 3. Setup Flutter (The engine Flet uses)
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+
+      # 4. Install Flet
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install flet
 
-      - name: Build with Flet
-        uses: flet-dev/flet-action@v0.1.0
-        with:
-          # The name of your main python file
-          main: main.py
-          
-          # The name of the output APK
-          output: numerology_pro.apk
-          
-          # App name displayed on the phone
-          app_name: "Numerology Pro"
-          
-          # App icon (optional, remove if you don't have one)
-          # icon: assets/icon.png 
+      # 5. Build the APK using Flet CLI
+      - name: Build APK
+        run: |
+          # This command builds the APK
+          flet build apk --project main.py --verbose
 
+      # 6. Upload the result so you can download it
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: android-apk
-          path: numerology_pro.apk
+          name: numerology-apk
+          path: build/apk/**/*.apk
